// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
.emotion-1 {
  -webkit-transition: opacity 200ms ease-in-out;
  transition: opacity 200ms ease-in-out;
  opacity: 0;
}

.emotion-0 {
  border-radius: 2px;
  max-width: 1280px;
  background: #3A3A47;
  color: #FFFFFF;
  font-size: 0.875rem;
  font-weight: bold;
  line-height: 1.5;
  text-align: center;
  padding: 0.5rem;
}

<body>
  <div>
    <div
      id="portal-root"
    />
  </div>
  <div>
    <span
      aria-describedby="tooltip-abc"
    >
      Testing
    </span>
  </div>
  <div
    aria-hidden="true"
    class="emotion-1"
    id="tooltip-abc"
    role="tooltip"
    style="position: absolute; top: 0px; left: 0px; opacity: 0; pointer-events: none; z-index: 1400;"
  >
    <div
      class="emotion-0"
    >
      Tooltip text
    </div>
  </div>
</body>
`;

exports[`should render correctly 2`] = `
.emotion-0 {
  border-radius: 2px;
  max-width: 1280px;
  background: #3A3A47;
  color: #FFFFFF;
  font-size: 0.875rem;
  font-weight: bold;
  line-height: 1.5;
  text-align: center;
  padding: 0.5rem;
}

.emotion-1 {
  -webkit-transition: opacity 200ms ease-in-out;
  transition: opacity 200ms ease-in-out;
  opacity: 0;
  opacity: 0;
}

<body>
  <div>
    <div
      id="portal-root"
    >
      <div
        aria-hidden="false"
        class="emotion-1"
        id="tooltip-abc"
        role="tooltip"
        style="position: absolute; top: 0px; left: 0px; opacity: 0; pointer-events: none; z-index: 1400;"
      >
        <div
          class="emotion-0"
        >
          Tooltip text
        </div>
      </div>
    </div>
  </div>
  <div>
    <span
      aria-describedby="tooltip-abc"
    >
      Testing
    </span>
  </div>
</body>
`;
